test/lit/pto/mgather_gm2l1_ub_idx_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// GM -> L1 (loc=mat dst) mgather requires the index to be a GM tensor, not a UB
// index tile: on A5 the cube core that issues the L1 transfer cannot read UB.
// Using a UB index tile with a mat destination must be rejected. The high-level
// (partition-view) form keeps all operands non-memref so the op verifier runs.

// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

module {
  func.func @mgather_gm2l1_ub_idx(%arg0: !pto.ptr<f16>) {
    %c0 = arith.constant 0 : index
    %c1 = arith.constant 1 : index
    %c32 = arith.constant 32 : index
    %c64 = arith.constant 64 : index
    %tv = pto.make_tensor_view %arg0, shape = [%c64, %c32], strides = [%c32, %c1]
      : !pto.tensor_view<64x32xf16>
    %mem = pto.partition_view %tv, offsets = [%c0, %c0], sizes = [%c64, %c32]
      : !pto.tensor_view<64x32xf16> -> !pto.partition_tensor_view<64x32xf16>
    %idx = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=i32, rows=1, cols=32, v_row=1, v_col=32,
                      blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile
      : !pto.tile_buf<loc=mat, dtype=f16, rows=32, cols=32, v_row=32, v_col=32,
                      blayout=col_major, slayout=row_major, fractal=512, pad=0>
    pto.mgather ins(%mem, %idx
        : !pto.partition_tensor_view<64x32xf16>,
          !pto.tile_buf<loc=vec, dtype=i32, rows=1, cols=32, v_row=1, v_col=32,
                        blayout=row_major, slayout=none_box, fractal=512, pad=0>)
      outs(%dst
        : !pto.tile_buf<loc=mat, dtype=f16, rows=32, cols=32, v_row=32, v_col=32,
                        blayout=col_major, slayout=row_major, fractal=512, pad=0>)
      {coalesce = #pto<coalesce row>}
    return
  }
}

// CHECK: error: 'pto.mgather' op expects GM->L1 mgather idx to be a GM tensor
